trying to fix overflow problem ...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@ html {
   height: 100%;
 }
 
+body {
+  overflow:hidden;
+}
+
 .container {
   height: 100%;
 }
